[tool.poetry]
name = "test-bobday"
version = "0.1.0"
description = ""
authors = ["Leonid3# <antonfenrisis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
